# minimal-agent

./: .gitignore  Dockerfile.api  Dockerfile.frontend  README.md  SPEC.md  agent.py  api.py  app.py  main.py  pyproject.toml  schemas.py
